# bfl-release

./: 0001-Integrate-patch-file-used-in-dry-version.patch  0001-importing-patches-from-Jade.patch  0001-importing-patches-from-hydro.patch  0001-importing-patches-from-indigo.patch  0002-Added-install-rule-for-package.xml.patch  0003-remove-the-ros-dependency.patch  0004-add-boost-dependency.patch  0005-add-the-bfl.pc-file.patch  0006-change-the-includedir-for-backward-compatibility.patch  0007-Fix-a-compile-issue-on-OS-X.patch  CMakeLists.txt  CONTENT_MOVED_TO_MASTER_BRANCH  README  README.md  debian.store  orocos-bfl.pc.in  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
groovy/: package.xml
kinetic/: package.xml
melodic/: package.xml
patch/: package.xml  total.patch
rpm/: ros-kinetic-bfl.spec  ros-lunar-bfl.spec  template.spec
src/: bfl_constants.h  bfl_err.h
src/filter/: SRiteratedextendedkalmanfilter.cpp  SRiteratedextendedkalmanfilter.h  asirfilter.cpp  asirfilter.h  bootstrapfilter.cpp  bootstrapfilter.h  extendedkalmanfilter.cpp  extendedkalmanfilter.h  filter.cpp  filter.h  iteratedextendedkalmanfilter.cpp  iteratedextendedkalmanfilter.h  kalmanfilter.cpp  kalmanfilter.h  mixtureParticleFilter.cpp  nonminimalkalmanfilter.cpp  nonminimalkalmanfilter.h  optimalimportancefilter.cpp  optimalimportancefilter.h  particlefilter.cpp  particlefilter.h
src/model/: analyticmeasurementmodel_gaussianuncertainty.cpp  analyticmeasurementmodel_gaussianuncertainty.h  analyticsystemmodel_gaussianuncertainty.cpp  analyticsystemmodel_gaussianuncertainty.h  discretesystemmodel.cpp  discretesystemmodel.h  linearanalyticmeasurementmodel_gaussianuncertainty.cpp  measurementmodel.cpp  (+12 more)
(+40 files in other folders)
