<?xml version="1.0"?>
<package>
  <name>bfl</name>
  <version>0.7.0</version>
  <description>
  This package contains a recent version of the Bayesian Filtering
  Library (BFL), distributed by the Orocos Project.  For stability
  reasons, this package is currently locked to revision 31655 (April
  19, 2010), but this revision will be updated on a regular basis to
  the latest available BFL trunk.  This ROS package does not modify
  BFL in any way, it simply provides a convenient way to download and
  compile the library, because BFL is not available from an OS package
  manager.  This ROS package compiles BFL with the Boost library for
  matrix operations and random number generation.
  </description>
  <maintainer email="meeussen@willowgarage.com">Wim Meeussen</maintainer>
  <author> Klaas Gadeyne, Wim Meeussen, Tinne Delaet and many others. See web page for a full contributor list. ROS package maintained by Wim Meeussen.</author>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/bfl</url>
  <url type="repository">https://github.com/ros-planning/bfl</url>
  <url type="bugtracker">https://github.com/ros-planning/bfl/issues</url>

  <run_depend>catkin</run_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>cppunit</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>cppunit</run_depend>

  <export>
    <build_type>cmake</build_type>
    <cpp cflags="-I${prefix}/include/bfl" lflags="-Wl,-rpath,${prefix}/lib  -L${prefix}/lib -lorocos-bfl"/>
    <rosdoc external="http://people.mech.kuleuven.be/~tdelaet/bfl_doc/doc/html/index.html" />
  </export>
</package>
